welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:32: error: not found: value color
	fleur(color.GREEN);
              ^FlowerPot:34: error: not found: value color
	fleur(color.PINK);
              ^FlowerPot:36: error: not found: value color
	fleur(color.ORANGE);
              ^