welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
var c: Color = Color.YELLOW

def point(c : Color)
{
	setCouleurBrosse(c: Color);
	baisseBrosse;
	leveBrosse;
}


def fleur (c : Color)
{
	point (c : Color);
	avance;
	point(Color.YELLOW);
	gauche; avance; 
	point (c : Color)
	recule; recule;
	point (c : Color);
	avance; droite; avance;
	point (c : Color)
	
}

def growFlowers()
{
	fleur(Color.RED);
	avance; avance; 
	fleur(Color.CYAN);
	droite; avance;avance;avance;avance;gauche; recule; recule;
	fleur(color.GREEN);
	recule;recule;recule;recule;recule;recule;
	fleur(color.PINK);
	gauche;avance;avance;droite;
	fleur(color.ORANGE);
}
